# pmpge

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
assets/: README.md
devices/: README.md  config.py-edgebadge.py  config.py-waveshare_touch_lcd_2_8.py  optimisation.md
devices/CircuitPython/: config.py-edge_badge.py  config.py-pico_system.py  config.py-waveshare_touch_lcd_2_8.py
devices/performance_results/: desktop.txt  edge_badge_circuitpython_10.1.4.txt  pico_2_circuitpython_10.1.4.txt  pico_circuitpython_10.1.4.txt  waveshare_touch_lcd_2.8.txt
devices/results/: desktop.txt  edge_badge_circuitpython_10.1.4.txt  edgebadge_circuitpython_10.1.4.txt  itsy_bitsy_circuitpython_10.1.4.txt  pico_2_circuitpython_10.1.4.txt  pico_circuitpython_10.1.4.txt  pico_system_circuitpython_10.1.4.txt  s3_zero_circuitpython_10.1.4.txt
examples/: test_examples.py
examples/1 - Game/: a_template_game_loop.py  b_update_function.py  (+1 more)
games/: readme.md
pgzge/: __init__.py  behaviours.py  collisions.py  controller.py  core.py  environment.py  game.py  game_object.py  graphics.py  kind.py  palette.py  particles.py  sound.py  sprite.py  sprites.py  trait.py
pmpge/: __init__.py  controller.py  environment.py  game.py  game_object.py  graphics.py  palette.py  platform.py  sound.py  sprite.py  system.py  utilities.py
validate/: config.py  data.py  test_data.py  utils.py  validate_all.py  validate_controller.py  validate_engine.py  validate_graphics.py  validate_performance.py  validate_sound.py  validation.md
(+210 files in other folders)
