# See: https://packaging.python.org/en/latest/overview/
[build-system]
requires = ["setuptools >= 82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "pgzge"
version = "2026.3.0"
requires-python = ">= 3.12, < 3.14"
description = "Pygame Zero Game Engine"
readme = "README.md"
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 2 - Pre-Alpha",
    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.setuptools]
packages = ["pgzge"]

[tool.pytest.ini_options]
pythonpath = "."
